php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #32001 xml_parse_into_struct() function exceeds maximum execution time (object)
Submitted: 2005-02-16 18:08 UTC Modified: 2005-03-02 19:15 UTC
From: geroxp at web dot de Assigned: jorton (profile)
Status: Closed Package: XML related
PHP Version: 5CVS-2005-02-17 OS: Linux (FC3)
Private report: No CVE-ID: None
 [2005-02-16 18:08 UTC] geroxp at web dot de
Description:
------------
When using xml_parse_into_struct() function with an object the following error occurs:
Fatal error: Maximum execution time of 30 seconds exceeded in /var/www/html/test.php on line 9


Version-Release number:
php-5.0.3-2

How reproducible:
Always

Reproduce code:
---------------
<?php
class myclass {

var $myparser;

function mytest() {
$this->myparser = xml_parser_create('');
$simple = "<para><note>simple note</note></para>";
xml_parse_into_struct($this->myparser, $simple, $myvals, $mytags);
print_r($myvals);
}

}

$myobject =& new myclass;
$myobject->mytest();

?>



Expected result:
----------------
Output of the xml-structure given as an array.

Actual result:
--------------
Fatal error: Maximum execution time of 30 seconds exceeded in /var/www/html/test.php on line 9

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-02-17 12:31 UTC] jorton@php.net
The test case is triggering an infinite loop in libxml2; I've proposed this patch: http://www.apache.org/~jorton/php_xmlenc.diff
 [2005-03-02 19:15 UTC] rrichards@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC