MFH: Fixed bug #32001 (xml_parse_into_struct() exceeds maximum execution time)